@@ -24,12 +24,11 @@
 
 package com.eliasnogueira.driver;
 
-import com.eliasnogueira.exceptions.TargetNotValidException;
 import org.openqa.selenium.MutableCapabilities;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -41,19 +40,11 @@ public class DriverFactory {
 
     public WebDriver createInstance(String browser) {
         Target target = Target.valueOf(configuration().target().toUpperCase());
-        WebDriver webdriver;
 
-        switch (target) {
-            case LOCAL:
-                webdriver = BrowserFactory.valueOf(browser.toUpperCase()).createDriver();
-                break;
-            case REMOTE:
-                webdriver = createRemoteInstance(BrowserFactory.valueOf(browser.toUpperCase()).getOptions());
-                break;
-            default:
-                throw new TargetNotValidException(target.toString());
-        }
-        return webdriver;
+        return switch (target) {
+            case LOCAL -> BrowserFactory.valueOf(browser.toUpperCase()).createDriver();
+            case REMOTE -> createRemoteInstance(BrowserFactory.valueOf(browser.toUpperCase()).getOptions());
+        };
     }
 
     private RemoteWebDriver createRemoteInstance(MutableCapabilities capability) {
@@ -61,7 +52,7 @@ public class DriverFactory {
         try {
             String gridURL = String.format("http://%s:%s", configuration().gridUrl(), configuration().gridPort());
 
-            remoteWebDriver = new RemoteWebDriver(new URL(gridURL), capability);
+            remoteWebDriver = new RemoteWebDriver(URI.create(gridURL).toURL(), capability);
         } catch (java.net.MalformedURLException e) {
             logger.log(Level.SEVERE, "Grid URL is invalid or Grid is not available");
             logger.log(Level.SEVERE, String.format("Browser: %s", capability.getBrowserName()), e);
